changing portfolio descriptions

--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
 
           <div class="bgrid folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/splitzz.png" alt="Splitzz">
+              <img src="images/portfolio/CutQs.png" alt="CutQs">
               <a href="#modal-05" class="overlay">
                 <div class="folio-item-table">
                   <div class="folio-item-cell">
-                    <h3 class="folio-title">Splitzz</h3>
+                    <h3 class="folio-title">CutQs</h3>
                     <!-- <span class="folio-types">
                             Branding
                         </span> -->
@@ -248,11 +248,11 @@
 
           <div class="bgrid folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/splitzz.png" alt="Splitzz">
+              <img src="images/portfolio/CareerShip.png" alt="CareerShip">
               <a href="#modal-06" class="overlay">
                 <div class="folio-item-table">
                   <div class="folio-item-cell">
-                    <h3 class="folio-title">Splitzz</h3>
+                    <h3 class="folio-title">CareerShip</h3>
                     <!-- <span class="folio-types">
                             Branding
                         </span> -->
@@ -272,19 +272,19 @@
           <div id="modal-01" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/pacman2.png" alt="" />
+              <img src="images/portfolio/eatthis.png" alt="" />
             </div>
 
             <div class="description-box">
-              <h4>Simple Pac-Man</h4>
-              <p>This game is inspired by the iconic video game, PAC-MAN</p>
+              <h4>Eat This!</h4>
+              <p>A matching card memory card game for all ages.</p>
 
-              <div class="categories">Built with HTML5 | CSS3 | Javascript | jQuery Mobile</div>
+              <div class="categories">Built with HTML5 | CSS3 | Javascript | jQuery</div>
             </div>
 
             <div class="link-box">
-              <a href="https://shumin13.github.io/project-1/"><i class="fa fa-globe"></i> Website</a>
-              <a href="https://github.com/shumin13/project-1"><i class="fa fa-github"></i> Github</a>
+              <a href="https://liyuan23.github.io/project-1/"><i class="fa fa-globe"></i> Website</a>
+              <a href="https://github.com/liyuan23/project-1"><i class="fa fa-github"></i> Github</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -298,15 +298,15 @@
             </div>
 
             <div class="description-box">
-              <h4>Makan Apa</h4>
-              <p>A web application to bookmark, locate and provide reviews on the halal eateries in Singapore</p>
+              <h4>Fantasy Tours</h4>
+              <p>A web application to find, book and share reviews on tours featuring stunning locations from the biggest TV and film brands.</p>
 
-              <div class="categories">Built with Node.js | Express | MongoDB | Google Maps Javascript API | Materialize CSS</div>
+              <div class="categories">Built with Node.js | Express | MongoDB | Google Maps Javascript API | Uploadcare CDN API | Materialize CSS</div>
             </div>
 
             <div class="link-box">
-              <a href="https://makanapasg.herokuapp.com/"><i class="fa fa-globe"></i> Website</a>
-              <a href="https://github.com/shumin13/project-2"><i class="fa fa-github"></i> Github</a>
+              <a href="https://fantasytours.herokuapp.com/"><i class="fa fa-globe"></i> Website</a>
+              <a href="https://github.com/liyuan23/project-2"><i class="fa fa-github"></i> Github</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -320,9 +320,8 @@
             </div>
 
             <div class="description-box">
-              <h4>Gift Loop</h4>
-              <p>This project is inspired by the paying-it-forward time bank system in Osaka. <br> Individuals can gain time credits by fulfilling requests and redeem time credits by creating requests or registering for rewards. Organisations can gain time
-                credits by offering rewards such as yoga classes and redeem time credits by creating requests.</p>
+              <h4>FoodSpace</h4>
+              <p>This project is inspired by the recent rise in multi-purpose online restaurant review aggregators. <br> Focused on currently trending dishes, the reviews and rankings help diners decide where to dine out and provides restaurant owners with market research to adapt their menu.</p>
 
               <div class="categories">Built with Ruby on Rails | PostgreSQL | Twilio API | Cloudinary API | Materialize CSS
               </div>
@@ -330,8 +329,8 @@
             </div>
 
             <div class="link-box">
-              <a href="https://giftloop.herokuapp.com/"><i class="fa fa-globe"></i> Website</a>
-              <a href="https://github.com/shumin13/project-3"><i class="fa fa-github"></i> Github</a>
+              <a href="https://foodspace.herokuapp.com/"><i class="fa fa-globe"></i> Website</a>
+              <a href="https://github.com/liyuan23/project-3"><i class="fa fa-github"></i> Github</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
             </div>
 
