--- a/index.html
+++ b/index.html
@@ -231,8 +231,24 @@
 
           <div class="bgrid folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/CutQs.png" alt="CutQs">
+              <img src="images/portfolio/happytrooper.png" alt="Happy Trooper">
               <a href="#modal-05" class="overlay">
+                <div class="folio-item-table">
+                  <div class="folio-item-cell">
+                    <h3 class="folio-title">Happy Trooper</h3>
+                    <!-- <span class="folio-types">
+                            Branding
+                        </span> -->
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="bgrid folio-item">
+            <div class="item-wrap">
+              <img src="images/portfolio/CutQs.png" alt="CutQs">
+              <a href="#modal-06" class="overlay">
                 <div class="folio-item-table">
                   <div class="folio-item-cell">
                     <h3 class="folio-title">CutQs</h3>
@@ -249,7 +265,7 @@
           <div class="bgrid folio-item">
             <div class="item-wrap">
               <img src="images/portfolio/CareerShip.png" alt="CareerShip">
-              <a href="#modal-06" class="overlay">
+              <a href="#modal-07" class="overlay">
                 <div class="folio-item-table">
                   <div class="folio-item-cell">
                     <h3 class="folio-title">CareerShip</h3>
@@ -262,9 +278,6 @@
             </div>
           </div>
           <!-- /folio-item -->
-
-
-
 
 
           <!-- modal popups - begin
@@ -323,7 +336,7 @@
               <h4>FoodSpace</h4>
               <p>This project is inspired by the recent rise in multi-purpose online restaurant review aggregators. <br> Focused on currently trending dishes, the reviews and rankings help diners decide where to dine out and provides restaurant owners with market research to adapt their menu.</p>
 
-              <div class="categories">Built with Ruby on Rails | PostgreSQL | Twilio API | Cloudinary API | Materialize CSS
+              <div class="categories">Built with Ruby on Rails | PostgreSQL | Google Maps API | Uploadcare CDN API | Materialize CSS
               </div>
 
             </div>
@@ -340,19 +353,19 @@
           <div id="modal-04" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/glover.png" alt="" />
+              <img src="images/portfolio/splitzz.png" alt="" />
             </div>
 
             <div class="description-box">
-              <h4>Glover</h4>
-              <p>Glover is a collision detection device and a phone application. When the device detected an impact, the phone application will send an SMS to your designated emergency contact with your location and health related details such as blood type
-                and allergies.</p>
+              <h4>Splitzz</h4>
+              <p>Splitzz is a web application for friends to split restaurant bills, so that everyone gets paid back accurately.<br>The usage of Optical Character Recognition (OCR) technology enables users to scan receipts and select specific items to calculate their share of the bill. </p>
 
-              <div class="categories">Built with React Native | Firebase</div>
+              <div class="categories">Built with Vue.js | Navigator API | Google Cloud Vision OCR API | Vue Material </div>
             </div>
 
             <div class="link-box">
-              <a href="https://github.com/shumin13/project4"><i class="fa fa-github"></i> Github</a>
+              <a href="https://splitzz.herokuapp.com/"><i class="fa fa-globe"></i> Website</a>
+              <a href="https://github.com/liyuan23/project-4-vue"><i class="fa fa-github"></i> Github</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -399,6 +412,25 @@
               <a href="https://github.com/shumin13/project4"><i class="fa fa-github"></i> Github</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
             </div>
+
+            <div id="modal-07" class="popup-modal slider mfp-hide">
+
+              <div class="media">
+                <img src="images/portfolio/glover.png" alt="" />
+              </div>
+
+              <div class="description-box">
+                <h4>Glover</h4>
+                <p>Glover is a collision detection device and a phone application. When the device detected an impact, the phone application will send an SMS to your designated emergency contact with your location and health related details such as blood type
+                  and allergies.</p>
+
+                <div class="categories">Built with React Native | Firebase</div>
+              </div>
+
+              <div class="link-box">
+                <a href="https://github.com/shumin13/project4"><i class="fa fa-github"></i> Github</a>
+                <a href="#" class="popup-modal-dismiss">Close</a>
+              </div>
 
           </div>
           <!-- /modal-06 -->
