--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- favicons
 	================================================== -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="./images/favicon.png">
 
 </head>
 
