editing css and portfolio descrip

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                   <div class="folio-item-cell">
                     <h3 class="folio-title">FoodSpace</h3>
                     <span class="folio-types">
-                      Restaurant Review Aggregator
+                      Dish/Restaurant Review Aggregator
                     </span>
                   </div>
                 </div>
@@ -247,7 +247,7 @@
 
           <div class="bgrid folio-item">
             <div class="item-wrap">
-              <img src="images/portfolio/cutqs.png" alt="CutQs">
+              <img src="images/portfolio/cutqs1.png" alt="CutQs">
               <a href="#modal-06" class="overlay">
                 <div class="folio-item-table">
                   <div class="folio-item-cell">
@@ -271,7 +271,7 @@
                   <div class="folio-item-cell">
                     <h3 class="folio-title">CareerShip</h3>
                     <span class="folio-types">
-                      Accenture Global Connected Hackathon 2017<br>
+                      Accenture Global Hackathon 2017<br>
                       Career Finder
                     </span>
                   </div>
@@ -306,6 +306,8 @@
           </div>
           <!-- /modal-01 -->
 
+
+
           <div id="modal-02" class="popup-modal slider mfp-hide">
 
             <div class="media">
@@ -326,6 +328,7 @@
             </div>
 
           </div>
+
           <!-- /modal-02 -->
 
           <div id="modal-03" class="popup-modal slider mfp-hide">
@@ -398,12 +401,13 @@
           <div id="modal-06" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images/portfolio/cutqs.png" alt="" />
+              <img src="images/portfolio/cutqs2.png" alt="" />
             </div>
 
             <div class="description-box">
               <h4>CutQs</h4>
-              <p>A mobile shopping companion app which integrates recommendations for healthier purchases and mobile checkout at retail grocers to help reduce diabetes and improve public health.</p>
+              <p>A mobile shopping companion app which integrates recommendations for healthier purchases and mobile checkout at retail grocers to help reduce diabetes and improve public health.<br>
+              Won 3rd Prize at the Ideasinc hackathon</p>
 
               <div class="categories">Built with MIT App Inventor</div>
             </div>
@@ -422,7 +426,7 @@
 
               <div class="description-box">
                 <h4>CareerShip</h4>
-                <p>A one-stop portal for youths to discover their future careers, through chatting with mentors and a recommendation engine which utilises psychometrics</p>
+                <p>A educational career website which recommends suitable careers for youths through psychometrics and provides them with a network to gain access to indsutry mentors and realistic expectations of their future careers.</p>
 
                 <div class="categories">Built with Node.js | Express | Materialize CSS</div>
               </div>
