added open in new tab

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </div>
 
             <div class="link-box">
-              <a href="https://liyuan23.github.io/project-1/"><i class="fa fa-globe"></i> Website</a>
+              <a href="https://liyuan23.github.io/project-1/" target="_blank"><i class="fa fa-globe"></i> Website</a>
               <a href="https://github.com/liyuan23/project-1"><i class="fa fa-github"></i> Github</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
             </div>
@@ -322,7 +322,7 @@
             </div>
 
             <div class="link-box">
-              <a href="https://fantasytours.herokuapp.com/"><i class="fa fa-globe"></i> Website</a>
+              <a href="https://fantasytours.herokuapp.com/" target="_blank"><i class="fa fa-globe"></i> Website</a>
               <a href="https://github.com/liyuan23/project-2"><i class="fa fa-github"></i> Github</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
             </div>
@@ -347,7 +347,7 @@
             </div>
 
             <div class="link-box">
-              <a href="https://foodspace.herokuapp.com/"><i class="fa fa-globe"></i> Website</a>
+              <a href="https://foodspace.herokuapp.com/" target="_blank"><i class="fa fa-globe"></i> Website</a>
               <a href="https://github.com/liyuan23/project-3"><i class="fa fa-github"></i> Github</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
             </div>
@@ -369,7 +369,7 @@
             </div>
 
             <div class="link-box">
-              <a href="https://splitzz.herokuapp.com/"><i class="fa fa-globe"></i> Website</a>
+              <a href="https://splitzz.herokuapp.com/" target="_blank"><i class="fa fa-globe"></i> Website</a>
               <a href="https://github.com/liyuan23/project-4-vue"><i class="fa fa-github"></i> Github</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
             </div>
@@ -391,7 +391,7 @@
             </div>
 
             <div class="link-box">
-              <a href="https://liyuan23.github.io/happy-trooper/"><i class="fa fa-globe"></i> Website</a>
+              <a href="https://liyuan23.github.io/happy-trooper/" target="_blank"><i class="fa fa-globe"></i> Website</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
             </div>
 
